--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP5wHRQSCpTVLGzu0dC+ids",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Reben80/Data110-32008--Sp25/blob/main/Week7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Desaleigh/Data110-21843--fall25/blob/main/Week7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -127,10 +126,68 @@
     {
       "cell_type": "code",
       "source": [
+        "# Set figure size\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "\n",
+        "# Scatter plot (manually colored)\n",
+        "plt.scatter(penguins[\"bill_length_mm\"], penguins[\"flipper_length_mm\"], color=\"mediumslateblue\", alpha=0.6, edgecolors=\"black\", label=\"Data Points\")\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(data=penguins, x=\"bill_length_mm\", y=\"flipper_length_mm\", scatter=False, color=\"red\", ci=None, label=\"Regression Line\")\n",
+        "\n",
+        "# Labels and title\n",
+        "plt.xlabel(\"Bill Length (mm)\", fontsize=12)\n",
+        "plt.ylabel(\"Fliper Length (mm)\", fontsize=12)\n",
+        "plt.title(\"Penguin Bill Measurements with Regression\", fontsize=14)\n",
+        "\n",
+        "# Add legend\n",
+        "plt.legend()\n",
+        "\n",
+        "# Show plot\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "loicte2EZL8S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Task 2: Create a Similar Plot for Bill Length vs. Body Mass"
       ],
       "metadata": {
         "id": "o7EwvkIIGyzr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set figure size\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "\n",
+        "# Scatter plot (manually colored)\n",
+        "plt.scatter(penguins[\"bill_length_mm\"], penguins[\"body_mass_g\"], color=\"mediumturquoise\", alpha=0.6, edgecolors=\"black\", label=\"Data Points\")\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(data=penguins, x=\"bill_length_mm\", y=\"body_mass_g\", scatter=False, color=\"red\", ci=None, label=\"Regression Line\")\n",
+        "\n",
+        "# Labels and title\n",
+        "plt.xlabel(\"Bill Length (mm)\", fontsize=12)\n",
+        "plt.ylabel(\"Body Mass (g)\", fontsize=12)\n",
+        "plt.title(\"Penguin Bill Measurements with Regression\", fontsize=14)\n",
+        "\n",
+        "# Add legend\n",
+        "plt.legend()\n",
+        "\n",
+        "# Show plot\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ph68xBcIZr42"
       },
       "execution_count": null,
       "outputs": []
@@ -151,6 +208,10 @@
       "cell_type": "code",
       "source": [
         "penguins_adeile=penguins[penguins['species']=='Adelie']\n",
+        "penguins_chinstrap=penguins[penguins['species']=='Chinstrap']\n",
+        "penguins_gentoo=penguins[penguins['species']=='Gentoo']\n",
+        "\n",
+        "\n",
         "penguins['species'].unique()"
       ],
       "metadata": {
@@ -162,10 +223,167 @@
     {
       "cell_type": "code",
       "source": [
-        "# Task 3: Scatter Plot with Regression for Adelie Penguins"
+        "# Task 3: Make 3 subplots — scatter + regression — for each species separately\n"
       ],
       "metadata": {
         "id": "4z5ilq7tHBEI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Adelie"
+      ],
+      "metadata": {
+        "id": "s0Hn1J0EhmrC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(15, 5))\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Bill Depth\n",
+        "axes[0].scatter(penguins_adeile['bill_length_mm'], penguins_adeile['bill_depth_mm'],\n",
+        "                color='dodgerblue', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_adeile['bill_length_mm'], y=penguins_adeile['bill_depth_mm'], ax=axes[0], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[0].set_xlabel('Bill Length (mm)')\n",
+        "axes[0].set_ylabel('Bill Depth (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Flipper Length\n",
+        "axes[1].scatter(penguins_adeile['bill_length_mm'], penguins_adeile['flipper_length_mm'],\n",
+        "                color=\"mediumslateblue\", alpha=0.6, edgecolors=\"black\", label=\"Data Points\")\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_adeile['bill_length_mm'], y=penguins_adeile['flipper_length_mm'], ax=axes[1], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[1].set_xlabel('Bill Length (mm)')\n",
+        "axes[1].set_ylabel('Flipper Length (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Body Mass\n",
+        "axes[2].scatter(penguins_adeile['bill_length_mm'], penguins_adeile['body_mass_g'],\n",
+        "                color='mediumturquoise', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_adeile['bill_length_mm'], y=penguins_adeile['body_mass_g'], ax=axes[2], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[2].set_xlabel('Bill Length (mm)')\n",
+        "axes[2].set_ylabel('Body Mass (g)')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aMH4fHMAd-W3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Chinstrap"
+      ],
+      "metadata": {
+        "id": "Q0DM7axEh0EB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(15, 5))\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Bill Depth\n",
+        "axes[0].scatter(penguins_chinstrap['bill_length_mm'], penguins_chinstrap['bill_depth_mm'],\n",
+        "                color='dodgerblue', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_chinstrap['bill_length_mm'], y=penguins_chinstrap['bill_depth_mm'], ax=axes[0], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[0].set_xlabel('Bill Length (mm)')\n",
+        "axes[0].set_ylabel('Bill Depth (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Flipper Length\n",
+        "axes[1].scatter(penguins_chinstrap['bill_length_mm'], penguins_chinstrap['flipper_length_mm'],\n",
+        "                color=\"mediumslateblue\", alpha=0.6, edgecolors=\"black\", label=\"Data Points\")\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_chinstrap['bill_length_mm'], y=penguins_chinstrap['flipper_length_mm'], ax=axes[1], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[1].set_xlabel('Bill Length (mm)')\n",
+        "axes[1].set_ylabel('Flipper Length (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Body Mass\n",
+        "axes[2].scatter(penguins_chinstrap['bill_length_mm'], penguins_chinstrap['body_mass_g'],\n",
+        "                color='mediumturquoise', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_chinstrap['bill_length_mm'], y=penguins_chinstrap['body_mass_g'], ax=axes[2], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[2].set_xlabel('Bill Length (mm)')\n",
+        "axes[2].set_ylabel('Body Mass (g)')"
+      ],
+      "metadata": {
+        "id": "HUI31GROh5rS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Gentoo"
+      ],
+      "metadata": {
+        "id": "g2aezs9siHob"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(15, 5))\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Bill Depth\n",
+        "axes[0].scatter(penguins_gentoo['bill_length_mm'], penguins_gentoo['bill_depth_mm'],\n",
+        "                color='dodgerblue', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_gentoo['bill_length_mm'], y=penguins_gentoo['bill_depth_mm'], ax=axes[0], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[0].set_xlabel('Bill Length (mm)')\n",
+        "axes[0].set_ylabel('Bill Depth (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Flipper Length\n",
+        "axes[1].scatter(penguins_gentoo['bill_length_mm'], penguins_gentoo['flipper_length_mm'],\n",
+        "                color=\"mediumslateblue\", alpha=0.6, edgecolors=\"black\", label=\"Data Points\")\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_gentoo['bill_length_mm'], y=penguins_gentoo['flipper_length_mm'], ax=axes[1], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[1].set_xlabel('Bill Length (mm)')\n",
+        "axes[1].set_ylabel('Flipper Length (mm)')\n",
+        "\n",
+        "# Scatter plot for Bill Length vs Body Mass\n",
+        "axes[2].scatter(penguins_gentoo['bill_length_mm'], penguins_gentoo['body_mass_g'],\n",
+        "                color='mediumturquoise', alpha=0.6, edgecolors='black', label='Data Points')\n",
+        "\n",
+        "# Regression line\n",
+        "sns.regplot(x=penguins_gentoo['bill_length_mm'], y=penguins_gentoo['body_mass_g'], ax=axes[2], scatter=False, color=\"red\", ci=None)\n",
+        "\n",
+        "# Labels\n",
+        "axes[2].set_xlabel('Bill Length (mm)')\n",
+        "axes[2].set_ylabel('Body Mass (g)')"
+      ],
+      "metadata": {
+        "id": "E9T_qQmbh1ZF"
       },
       "execution_count": null,
       "outputs": []
@@ -291,6 +509,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Task 4: Pairplot Remix\n",
+        "\n",
+        "Make a **new pairplot** for the penguins dataset with these settings:\n",
+        "\n",
+        "- Use a **different column** for `hue` than before (for example, `island` or `sex`).  \n",
+        "- Choose **different markers** such as `[\"o\", \"s\", \"D\"]`.  \n",
+        "- Pick a **different color palette** (for example, `\"magma\"` or `\"coolwarm\"`).  \n",
+        "- Keep the **diagonal as KDE** (`diag_kind=\"kde\"`).   \n",
+        "- Drop missing values for the columns you use.  \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nvx3IMbPIMC5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Key Features of `sns.pairplot`:\n",
         "\n",
         "1. **Plots All Pairwise Relationships**:\n",
@@ -360,7 +597,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# creating panda series which consist of index and value.. example are bellow\n",
         "# Calculate the mean body mass for each species\n",
         "species_means = penguins.groupby('species')['body_mass_g'].mean()\n",
         "\n",
@@ -449,9 +686,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "fcnf0h64nXcr"
       },
@@ -739,6 +974,38 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 5: Create a 2×2 Grid with Mixed Plot Types\n",
+        "\n",
+        "Make a figure with **four subplots** arranged in a 2×2 grid using  \n",
+        "`fig, axes = plt.subplots(2, 2, figsize=(10, 8))`.\n",
+        "\n",
+        "Use the **penguins dataset** and include a mix of plot types:\n",
+        "\n",
+        "- **(Top-left)**: `sns.barplot()` → show **body mass by species**.  \n",
+        "- **(Top-right)**: `sns.scatterplot()` → plot **bill length vs bill depth**, color by `species`.  \n",
+        "- **(Bottom-left)**: `sns.histplot()` → distribution of **flipper length**, separated by `species` (`hue=\"species\"`).  \n",
+        "- **(Bottom-right)**: `sns.boxplot()` → compare **body mass by island**.  \n",
+        "\n",
+        "Add a **title for each subplot**, and call `plt.tight_layout()` at the end.\n",
+        "\n",
+        "**Deliverable:** one combined figure (saved as `.png`, around 150 dpi) that clearly shows all four plots with appropriate labels and colors.\n"
+      ],
+      "metadata": {
+        "id": "snncj2IpKe75"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5bEgUNO3KN7z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "source": [
         "fig, axes = plt.subplots(1, 3, figsize=(10, 5))\n",
         "\n",
@@ -873,6 +1140,25 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 6: Create a Pie Chart (Penguins Dataset)\n",
+        "\n",
+        "3. Count how many penguins belong to each species using `value_counts()`.  \n",
+        "4. Create a pie chart using `plt.pie()` with:\n",
+        "   - `labels` as species names.  \n",
+        "   - `autopct='%1.1f%%'` to show percentages.  \n",
+        "   - `startangle=90` for better orientation.  \n",
+        "   - `explode` to slightly separate one slice (optional).  \n",
+        "5. Add a **title** like `\"Distribution of Penguin Species\"`.  \n",
+        "6. Make the chart circular by setting `plt.axis('equal')`.  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Mz24MiKaKsIX"
+      }
     },
     {
       "cell_type": "markdown",
